k8s/btt-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btt-server
  labels:
    app: btt-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: btt-server
  template:
    metadata:
      labels:
        app: btt-server
    spec:
      containers:
      - name: btt-server
        image: registry.digitalocean.com/mpaige-container-registry/btt-server:v0.1.7
        ports:
        - containerPort: 80
