k8s/adminer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  labels:
    app: adminer
spec:
  ports:
    - port: 8080
      name: adminer-port
  selector:
    app: adminer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer-deployment
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer-container
        image: adminer:4
