k8s/btt-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btt-client-service
spec:
  selector:
    app: btt-client
  ports:
    - protocol: TCP
      port: 80
