k8s/btt-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: btt-server-service
spec:
  selector:
    app: btt-server
  ports:
    - protocol: TCP
      port: 80
