k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   kubernetes.io/ingress.class: "nginx" 
  #   cert-manager.io/issuer: letsencrypt-staging
spec:
  rules:
  - host: "adminer.boxtotabletop.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
  - host: "api.boxtotabletop.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: btt-server-service
            port:
              number: 80
  - host: "www.boxtotabletop.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: btt-client-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - "boxtotabletop.com"
  #   secretName: boxtotabletop #btt-cert-tls
